# cmc_msu_cpp_course

./: .gitmodules
problem1/: tree.h
problem2/: CMakeLists.txt  main.cpp
problem2/include/: assertions.h  bernoulli.h  creator.h  distribution_factory.h  finite.h  generator_base.h  geometric.h  mean.h  options.h  poisson.h  utility.h
problem2/src/: bernoulli.cpp  distribution_factory.cpp  finite.cpp  geometric.cpp  poisson.cpp
problem3/: CMakeLists.txt  Makefile  task1.cpp  task2.cpp
problem3/include/: ConcreteProducts.h  ConcreteShops.h  IProduct.h  IShop.h
problem3/src/: ConcreteShops.cpp  IProduct.cpp  IShop.cpp
problem3/test/: Fakes.h  IProductTest.h  InteractionTest.h  tests.h
